user login page layout issue fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -128,6 +128,10 @@
 	width:50%!important;
 	top:10px;
 }
+.full_width{
+	width: 100% !important;
+}
+
 
 .mark-complete-link{
 	border-radius: 30px; 
